# shadowsocks-manyuser-management-daemon

./: CMakeLists.txt  README.md  start_servers.c  start_servers.sh
addons/: feedback.sh
lib/: CMakeLists.txt  README.md
lib/iniparser/: CMakeLists.txt  README.md
lib/iniparser/iniparser-4.0/: CMakeLists.txt
lib/mysql/: README.md
lib/mysqlclient/: README.md
lib/mysqlclient/mysql/: my_config.h  mysql_version.h
lib_src/: CMakeLists.txt
mysql_backup_file/: README.md  free_user.sql  shadowsocks.sql
shadowsocks-libev-2.4.5/libcork/core/: ip-address.c
shadowsocks-libev-2.4.5/libcork/ds/: array.c
shadowsocks-libev-2.4.5/libcork/include/libcork/core/: net-addresses.h
src/: CMakeLists.txt  README.md  server.c  start_servers.c
src/addons/: CMakeLists.txt
src/addons/feedback/: CMakeLists.txt  feedback.c
whmcs/: ss_change_setting.php
whmcs/modules/servers/shadowsockslibev/: shadowsockslibev.php
whmcs/templates/six/: ss_setting.tpl  ss_setting_change_result.tpl
